@@ -20,8 +20,6 @@
 	      <td style='vertical-align: top'><input type="radio" name="fileType" value="FM" CHECKED></td>
 	      <td><p><b>FlightMemory (.html)</b> &mdash; FlightMemory does not have an export function, but OpenFlights can "screen-scrape" its FlightData pages.  Log into your FlightMemory account, go to the FlightData page, and select "Save Web Page" in your browser. Upload the resulting HTML file.  Repeat once for each page of data.</p>
 		<p><i>Warning</I>: Be sure to set your FlightMemory language to <b>English</b> before saving the pages.</p>
-	  <p><i>Note</i>: The <b>airline names</b> used on FlightMemory do not always match those used by OpenFlights, but the import tool will try its best to match them.  Importing accuracy is <i>much higher</i> if your FlightData also includes flight numbers; for example, there are four airlines named "Virgin", but only Virgin Atlantic has the code "VS".</p>
-
 	  <p><i>Note</i>: There is <b>no duplicate detection</b> at this time.  If you import a FlightMemory file twice, all flights in it will be added twice.</p>
 
 	  <p><i>Note</i>: The <b>FlightMemory format</b> changes from time to time.  Please <a href="/contact.html">report</a> any bugs or oddities, and be sure to include the exact error and the "Tmpfile" value from the top of the import page.</p>
@@ -35,7 +33,9 @@
 	</table>
 	
 	<h4>File to upload</h4>
-	<p><input type="file" name="userfile" size="30"></p>
+	<p><input type="file" name="userfile" size="30"> <b>Keep historical airline names?</b> <input type="checkbox" name="historyMode" value="yes"></td>
+
+	<p>OpenFlights normally tries to match airlines and flight numbers to known/current airlines.  If you check the box above, all airline names will be preserved <i>exactly</i> as they were before, typos and all.</p>
 
 	<p>You will be given a chance to review the flights before they are actually imported.  See <input type="button" value="Settings" align="middle" onclick='JavaScript:parent.opener.settings()'> to backup or clear your flights before importing.</p>
 
